--- a/kfreebsd/META.in
+++ b/kfreebsd/META.in
@@ -2,4 +2,4 @@ version = "@VERSION@"
 description = "Mirage kFreeBSD platform"
 archive(byte) = "oS.cma"
 archive(native) = "oS.cmxa"
-requires = "cstruct cstruct.syntax lwt lwt.syntax"
+requires = "cstruct cstruct.syntax lwt lwt.syntax ipaddr"
